# nostr-vpn

./: .dockerignore  .env.release.example  .env.zapstore.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.e2e  Dockerfile.tauri-driver-e2e  README.md  TODO.md  docker-compose.nat-e2e.yml
.github/workflows/: ci.yml  release.yml  windows-smoke.yml
crates/nostr-vpn-cli/: Cargo.toml
crates/nostr-vpn-cli/src/: config_bootstrap.rs  daemon_runtime.rs  diagnostics.rs  macos_network.rs  main.rs  platform_routing.rs  relay_runtime.rs  service_management.rs  session_runtime.rs  userspace_wg.rs
crates/nostr-vpn-cli/src/diagnostics/: port_mapping.rs
crates/nostr-vpn-cli/src/tests/: cli_smoke.rs  daemon_control.rs  routing.rs  routing_peer_paths.rs  routing_relays.rs  runtime_misc.rs  service_cli.rs  stats_cli.rs  support.rs
crates/nostr-vpn-core/: Cargo.toml
crates/nostr-vpn-core/src/: config.rs  config_defaults.rs  control.rs  join_requests.rs  lib.rs  magic_dns.rs  nat.rs  paths.rs  platform_paths.rs  presence.rs  signaling.rs
crates/nostr-vpn-core/tests/: config_tests.rs  join_requests_e2e.rs  magic_dns_tests.rs  path_tests.rs  presence_tests.rs  signaling_e2e.rs
crates/nostr-vpn-core/tests/config_tests/: defaults.rs  magic_dns.rs
crates/nostr-vpn-core/tests/support/: ws_relay.rs
crates/nostr-vpn-gui/: package.json  pnpm-lock.yaml  vite.config.ts
crates/nostr-vpn-gui/e2e-tauri/: join-request.mjs  smoke.mjs
crates/nostr-vpn-gui/scripts/: prepare-sidecar-lib.mjs  prepare-sidecar.mjs  prepare-sidecar.test.mjs
crates/nostr-vpn-gui/src/: ActiveNetworkPanel.svelte  App.svelte  AppBootstrap.svelte  HeroStatusPanel.svelte  InviteSharePanel.svelte  PublicServicesPanel.svelte  RoutingPanel.svelte  SavedNetworkCard.svelte  SavedNetworkParticipantRow.svelte  SavedNetworksPanel.svelte  ServiceActionPanel.svelte  app.css  main.rs
crates/nostr-vpn-gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/nostr-vpn-gui/src-tauri/icons/: icon.icns
crates/nostr-vpn-gui/src-tauri/src/: android_session.rs  android_session_planning.rs  android_session_runtime.rs  android_session_tunnel.rs  android_vpn.rs  app_runtime.rs  backend_configuration.rs  backend_service.rs  daemon_runtime.rs  ios_packet_tunnel.rs  lan_pairing.rs  lib.rs  main.rs  mobile_runtime_state.rs  mobile_wg.rs  path_resolution.rs  service_status.rs
crates/nostr-vpn-gui/src-tauri/src/ios_packet_tunnel/: ios_tunnel_planning.rs
crates/nostr-vpn-gui/src/lib/: countdown.js  countdown.test.js  hero-state.js  hero-state.test.js  identity-card.test.js  mesh-id.js  mesh-id.test.js  service-repair.js  service-repair.test.js  session-toggle.js  session-toggle.test.js  tauri.ts  types.ts
crates/nostr-vpn-web/: Cargo.toml
crates/nostr-vpn-web/src/: main.rs
crates/nostr-vpn-wintun/: Cargo.toml
crates/nostr-vpn-wintun/src/: lib.rs
docs/: android-build-windows.md  path-maintenance-architecture.md  protocol.md
scripts/: build_android_windows.ps1  e2e-active-network-docker.sh  e2e-connect-docker.sh  e2e-divergent-roster-docker.sh  e2e-docker.sh  e2e-exit-node-docker.sh  e2e-nat-docker.sh  e2e-tauri-driver-docker.sh  local-release-lib.mjs  local-release.mjs  local-release.test.mjs  publish-zapstore-android.sh  sign_and_install_android.ps1
