[package]
name = "nostr-vpn-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
boringtun.workspace = true
clap.workspace = true
dirs.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true

nostr-vpn-core = { path = "../nostr-vpn-core" }

[[bin]]
name = "nvpn"
path = "src/main.rs"
