[package]
name = "nostr-vpn-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
dirs.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

nostr-vpn-core = { path = "../nostr-vpn-core" }
crab_nat = "0.7"
igd-next = { version = "0.16", features = ["aio_tokio"] }
netdev = "0.40"

[target.'cfg(unix)'.dependencies]
boringtun = { workspace = true, features = ["device"] }

[target.'cfg(target_os = "windows")'.dependencies]
boringtun.workspace = true
nostr-vpn-wintun = { path = "../nostr-vpn-wintun" }
wintun = "0.5.1"

[[bin]]
name = "nvpn"
path = "src/main.rs"

[dev-dependencies]
nostr-sdk.workspace = true
