[package]
name = "nostr-vpn-wintun"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
anyhow.workspace = true
wintun = "0.5.1"

[dev-dependencies]
anyhow.workspace = true

[lints.rust]
unsafe_code = "allow"
