[package]
name = "nostr-vpn-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "nostr_vpn_gui"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3", features = [] }

[dependencies]
anyhow.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
nostr-sdk.workspace = true
tauri = { version = "2.6", features = ["tray-icon", "image-png"] }

nostr-vpn-core = { path = "../../nostr-vpn-core" }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "macos")'.dependencies]
runas = "1.2"
